# ragtool

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_REPORT.md  ANALYSIS_REPORT1.md  ARCHITECTURE_VISION.md  ARCHITECTURE_VISION1.md  CHANGELOG_v5.2.md  CHANGELOG_v5.4.md  CHANGELOG_v5.5.md  CHANGELOG_v5.6.md  CHANGELOG_v5.7.md  CHANGELOG_v5.8.md  CLAUDE.md  CLAUDE_CODE_PROMPT_RAG_AUDIT_FIX.md  CLI_CONSOLIDATION_REPORT.md  CLI_CONSOLIDATION_RESULTS.md  CLOCKIFY_SUPPORT_CLI_README.md  CODEBASE_IMPROVEMENTS_2025-11-09.md  COMPREHENSIVE_AUDIT_2025-11-07.md  COMPREHENSIVE_RAG_ANALYSIS_AND_FIXES_2025-11-09.md  COMPREHENSIVE_RAG_AUDIT_2025-11-08.md  DEAD_CODE_ANALYSIS.md  DEEPSEEK_INTEGRATION_TEST.md  Dockerfile  EMPTY_COMMIT_VERIFICATION_REPORT.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PROMPT.md  IMPLEMENTATION_SUMMARY_V2.md  IMPROVEMENTS.jsonl  IMPROVEMENTS1.jsonl  IMPROVEMENTS_V5.9.md  INVESTIGATION_REPORT.md  LOGGING_CONFIG.md  M1_COMPATIBILITY.md  M1_MACOS_COMPREHENSIVE_AUDIT_2025-11-07.md  Makefile  PR92_RESOLUTION_SUMMARY.md  PRODUCTION_GUIDE.md  PRODUCTION_READINESS_ANALYSIS.md  (+29 more)
.github/workflows/: ci.yml  eval.yml  lint.yml  release.yml  test.yml
clockify_rag/: __init__.py  __main__.py  answer.py  api.py  api_client.py  async_support.py  caching.py  chunking.py  cli.py  cli_modern.py  config.py  embedding.py  embeddings_client.py  env_checks.py  error_handlers.py  exceptions.py  http_utils.py  indexing.py  llm_client.py  logging_config.py  logging_utils.py  metrics.py  precomputed_cache.py  retrieval.py  sanity_check.py  utils.py
config/: defaults.yaml  query_expansions.json  sample_faqs.txt
docs/: CONFIGURATION.md  DEPLOYMENT.md  FAQ_CACHE_USAGE.md  OPERATIONS.md  RAG_PROD_CHECKLIST.md  README.md  RUNBOOK.md  operator_authentication.md
docs/archive/: README.md
docs/archive/audit_deliverables/: ACCEPTANCE_TESTS_PROOF.md  ANALYSIS_REPORT1.md  ARCHITECTURE_VISION.md  ARCHITECTURE_VISION1.md  CLAUDE_CODE_PROMPT_COMPREHENSIVE.md  CLAUDE_CODE_PROMPT_RAG_QUALITY.md  CLAUDE_CODE_PROMPT_SIMPLE.md  CLAUDE_PROMPTS_README.md  COMPATIBILITY_AUDIT_2025-11-05.md  COMPREHENSIVE_CODE_REVIEW.md  CRITICAL_FIXES_REQUIRED.md  DEEPSEEK_VERIFICATION_SUCCESS.md  DELIVERABLES_INDEX.md  DELIVERY_SUMMARY_V2.md  DEPLOYMENT_READY.md  ENHANCEMENT_SUMMARY_V3_5.md  FILES_MANIFEST.md  FINAL_DELIVERY.md  FINAL_DELIVERY_V4_0.md  FINAL_HARDENED_DELIVERY.md  FIXES_APPLIED.md  FIXES_APPLIED_2025-11-05.md  FULL_REPO_REVIEW_SUMMARY.md  HARDENED_CHANGES.md  HARDENED_DELIVERY.md  HARDENING_CHANGES_APPLIED.md  HARDENING_IMPROVEMENT_PLAN.md  HARDENING_V3_4_DELIVERABLES.md  IMPLEMENTATION_SUMMARY.md  M1_COMPATIBILITY_AUDIT.md  M1_COMPREHENSIVE_AUDIT_2025.md  MERGE_COMPLETE_v5.1.md  MODULARIZATION.md  NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT_v2.md  OLLAMA_REFACTORING_GUIDE.md  OLLAMA_REFACTORING_SUMMARY.md  OPERATIONAL_IMPROVEMENTS_SUMMARY.md  PATCHES.md  PRODUCTION_READINESS_FINAL_CHECK.md  (+16 more)
eval_datasets/: README.md  clockify_v1.jsonl
scripts/: build_faq_cache.py  ci_bootstrap.sh  create_dummy_index.py  generate_chunk_title_map.py  m1_compatibility_test.sh  smoke.sh  smoke_rag.py  verify_fallback.py  verify_v5.1.sh
tests/: __init__.py  conftest.py  test_answer.py  test_answer_once_logging.py  test_api_client.py  test_api_concurrency_ingest.py  test_api_health_concurrency.py  test_api_ingest_integration.py  test_api_lifespan.py  test_api_metrics_endpoint.py  test_api_query.py  test_api_query_concurrency.py  test_api_state_race_conditions.py  test_async_support.py  test_bm25.py  test_chat_repl.py  test_chunker.py  test_cli_determinism.py  test_cli_modern_query.py  test_cli_thread_safety.py  test_config_module.py  test_embedding_queue.py  test_faiss_integration.py  test_logging.py  test_metrics.py  test_metrics_validation.py  test_packer.py  test_proxy_trust_env.py  test_query_cache.py  test_query_expansion.py  test_query_logging_flow.py  test_rag_edge_cases.py  test_rate_limiter.py  test_retrieval.py  test_retriever.py  test_sanitization.py  test_selftest_cli.py  test_thread_safety.py  test_verify_env.py
