[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clockify-rag"
version = "5.9.1"
description = "Production-ready RAG system with Apple Silicon support, hybrid retrieval, and modular architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Clockify Team", email = "support@clockify.me" }
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "nlp",
    "embeddings",
    "faiss",
    "bm25",
    "apple-silicon",
    "m1",
    "llm"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # HTTP client and networking
    "requests>=2.31.0",
    "urllib3>=2.1.0",
    "aiohttp>=3.11.0",  # Async HTTP client for async_support

    # Numerical computing and data structures
    "numpy>=1.26.0,<2.4.0",

    # Tokenization
    "tiktoken>=0.5.0",

    # Embeddings and retrieval
    "sentence-transformers>=2.6.0",
    "torch>=2.3.0,<2.6.0",  # Metal/MPS stable window for macOS
    "rank-bm25>=0.2.2",
    "nltk>=3.8.0",

    # ANN (Approximate Nearest Neighbors)
    # Note for M1/ARM64: Use conda for installation or set USE_ANN fallback
    "faiss-cpu>=1.8.0",
    "hnswlib>=0.8.0",  # ANN fallback if FAISS unavailable

    # Core dependencies for API and CLI
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",

    # Data processing and utilities
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",

    # Scientific computing
    "scipy>=1.11.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
openai = [
    "openai>=1.50.0",
]
anthropic = [
    "anthropic>=0.34.0",
]
ollama = [
    "ollama>=0.3.0",
]
eval = [
    "ragas>=0.1.14",
    "datasets>=2.19.0",
    "evaluate>=0.4.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=3.7.0",
    "ipython>=8.20.0",
]

[project.urls]
Homepage = "https://github.com/apet97/1rag"
Documentation = "https://github.com/apet97/1rag/docs"
Repository = "https://github.com/apet97/1rag.git"
Issues = "https://github.com/apet97/1rag/issues"

[project.scripts]
ragctl = "clockify_rag.cli:app"

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.black]
line-length = 120
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | rag_env
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "rag_env",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["clockify_rag"]
profile = "black"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
show_error_context = true
pretty = true
exclude = [
    "^tests/",
    "^rag_env/",
    "^build/",
    "^dist/",
]

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "numpy.*",
    "urllib3.*",
    "sentence_transformers.*",
    "faiss.*",
    "psutil.*",
    "rank_bm25.*",
    "torch.*",
    "hnswlib.*",
    "nltk.*",
    "tiktoken.*",
    "fastapi.*",
    "uvicorn.*",
    "typer.*",
    "pydantic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: async tests using event loop",
]

[tool.coverage.run]
source = ["clockify_rag"]
omit = [
    "tests/*",
    "rag_env/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["clockify_rag"]
skip_gitignore = true
